                    Changes made to Pyjamas since 0.8pre1
                    ---------------------------------

 * use new platform override scheme {module}.{platformname}.py so that
   platform override files live in the same subdirectory as the actual
   file it's overriding

 * moved JSONParser.py to json.py (in standard modules) because it is
   effectively identical, and confusing to try to indicate that JSONParser.py
   is somehow different or "special".

 * DateField - show Calendar for typed-in month, not always current, 
    By Maho (Łukasz Mach)
 
 * pyjs/src/pyjs/linker.py workaround Issue #677, reverted cwd=pydir
   so that compile works on Mac with python in /opt/local
   By Michael Yang

 * pyjs/src/pyjs/lib/string.py workaround Issue #658, mods to Template
   class so that template strings substitution works.
   By Phil Charlesworth

                    Changes made to Pyjamas since 0.7
                    ---------------------------------

 * Added simple sys.stdout and sys.stderr objects. The print statement
   now uses sys.stdout for printing. You can intercept print statements
   by overriding sys.stdout (e.g. for displaying them on the web page).
   By Waldemar Kornewald

 * Fixed sys.exc_info() to behave more like Python (i.e. returning the
   traceback starting from the current context instead of the whole
   execution stack). Also includes tb_frame.f_globals, contributed
   by Waldemar Kornewald

 * Added very basic traceback module with format_traceback() function
   which only works when compiling with debug information,
   contributed by Waldemar Kornewald

 * Added oninput and onpropertychange event support, thanks to Maxim
   Lacrima.

 * Make pyjsbuild call out to translator.py using subprocess.Popen,
   with a view to adding "build generators" that will create Makefiles,
   scons build files etc.  pyjsbuild should not be doing the job of make,
   and... it's doing the job of make.
