@@ -89,6 +89,7 @@ Copyright: 2012 Michael Yang <yangofzeal@gmail.com>
 Copyright: 2011 Gustaf Nilsson <gustaf@laserpanda.com>
 Copyright: 2012 Robert Peters <robertpeters@winterlionsoftware.com>
 Copyright: 2011 Rasiel@fliper.cc
+Copyright: 2011 Rene Maurer <renemaur@gmail.com>
 
 Files: pyjs/src/pyjs/lib/socket.py
 Copyright: 2008-2010, David P. D. Moss.
